# ReeDjango

./: .gitignore  LICENSE  db.sqlite3  manage.py  pyproject.toml
aboutdoc/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
aboutdoc/migrations/: 0001_initial.py  0002_document_file.py  0003_catalog.py  0004_delete_catalog.py
auth/: settings.py  urls.py
catalog/: admin.py  models.py  serializers.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_catalog_file.py  0003_reestr.py  0004_poiskpravoobladateley.py  0005_inostrannyeokupy.py  0006_alter_poiskpravoobladateley_file_alter_reestr_file.py
chatgpt/: chatgpt.py  models.py  serializers.py  urls.py  views.py
contact/: models.py  serializers.py  urls.py  views.py
media/catalogs/: a.out
news/: admin.py  models.py  serializers.py  urls.py  views.py
news/migrations/: 0001_initial.py
roocoop/: asgi.py  settings.py  urls.py  wsgi.py
users/: choices.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_username.py
